--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html><html lang='ja'><meta charset='utf-8'/>
+<html lang='ja'>  
 <head>
+ <meta>
   <title>たいとる</title>
   <meta property="og:title" content="たいとる" />
   <meta property="og:description" content="せつめいせつめい" />
@@ -17,9 +19,10 @@
 
   <link rel="stylesheet" href="index.css"/>
 </head>
-<body>
-  <div class=header>
-    <h1>たいとる</h1>
+
+  <body> style="background: rgb(255,200,200);" 
+   <div class=header>
+    <h1>たいとる liyingxuan's website</h1>
     <div>せつめいせつめい</div>
   </div>
   <div class=main>
